# haskell-mooc

./: .gitignore  README.md  cabal.project  mooc.cabal
exercises/Examples/: FetchWords.hs
exercises/Mooc/: Th.hs
